sample/errors/sample_11.nev
enum E { ONE }
enum E { TWO }

func main() -> int
{
    0
}
